bug: opening menu causes scroll jump

--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -202,7 +202,7 @@ textarea {
 html {
   font: 112.5%/1.45em georgia, serif;
   box-sizing: border-box;
-  overflow-y: auto;
+  overflow-y: visible;
 }
 * {
   box-sizing: inherit;
